# ipfs_storage_cruster

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
crates/async_tasks_recorder/: Cargo.toml  README.md
crates/async_tasks_recorder/examples/: basic.rs
crates/async_tasks_recorder/src/: lib.rs
crates/async_tasks_recorder/tests/: async_tasks_recorder_tests.rs
crates/async_tasks_recorder/tests/async_tasks_recorder_tests_repo/: check.rs  launch.rs  mod.rs  task.rs  tools.rs
crates/deserialize_form_array_in_query_parameter/: Cargo.toml
crates/deserialize_form_array_in_query_parameter/src/: lib.rs  vec_deserialize.rs
crates/deserialize_form_style_query_parameter/: Cargo.toml  README.md
crates/deserialize_form_style_query_parameter/src/: lib.rs
crates/ipfs_node_wrapper/: Cargo.toml
crates/ipfs_node_wrapper/src/: add_pin_manager.rs  app.rs  app_builder.rs  common.rs  error_convert.rs  errors.rs  ipfs_client.rs  lib.rs  main.rs  models.rs
crates/ipfs_node_wrapper/src/admin_app/: ipfs_helper.rs  mod.rs
crates/ipfs_node_wrapper/src/admin_app/handlers/: mod.rs  pin.rs  traffic.rs
crates/ipfs_node_wrapper/src/app/: dto.rs  mod.rs  vo.rs
crates/ipfs_node_wrapper/src/app/admin_app/: handlers.rs  ipfs_helper.rs  mod.rs
crates/ipfs_node_wrapper/src/app/admin_app/handlers/: mod.rs  pin.rs  traffic.rs
crates/ipfs_node_wrapper/src/app/public_app/: handlers.rs  mod.rs
crates/ipfs_node_wrapper/src/app/public_app/handlers/: mod.rs
crates/ipfs_node_wrapper/src/error/: errors_list.rs  mod.rs
crates/ipfs_node_wrapper/src/errors/: convert.rs  errors_list.rs  mod.rs
crates/ipfs_node_wrapper/src/ipfs_client/: mod.rs  models.rs
crates/ipfs_node_wrapper/src/public_app/: handlers.rs  mod.rs
crates/ipfs_node_wrapper/src/public_app/handlers/: mod.rs
crates/ipfs_node_wrapper/src/utils/: mod.rs
crates/ipfs_node_wrapper_app/: Cargo.toml  Settings.toml
crates/ipfs_node_wrapper_app/src/: main.rs
crates/ipfs_node_wrapper_app_structs/: Cargo.toml
crates/ipfs_node_wrapper_app_structs/src/: lib.rs
crates/ipfs_node_wrapper_app_structs/src/errors/: mod.rs
crates/ipfs_node_wrapper_app_structs/src/public/: dtos.rs
crates/ipfs_node_wrapper_client/: Cargo.toml
crates/ipfs_node_wrapper_client/src/: client.rs  client_tools.rs  common.rs  lib.rs
crates/ipfs_node_wrapper_client/src/admin/: mod.rs  normal.rs  pin.rs  traffic.rs
crates/ipfs_node_wrapper_client/tests/: basic.rs
crates/ipfs_node_wrapper_structs/: Cargo.toml
crates/ipfs_node_wrapper_structs/src/: common.rs  lib.rs  models.rs
crates/ipfs_node_wrapper_structs/src/admin/: dtos.rs  models.rs
crates/ipfs_node_wrapper_structs/src/errors/: errors_list.rs  mod.rs
crates/ipfs_pin_service_api/: Cargo.toml
crates/ipfs_pin_service_api/src/: api.rs  common.rs  error.rs  errors.rs  lib.rs  models.rs
crates/ipfs_pin_service_axum_api/: Cargo.toml
crates/ipfs_pin_service_axum_api/src/: api.rs  common.rs  errors.rs  lib.rs  models.rs  vo.rs
crates/ipfs_pin_service_axum_api_framework/: Cargo.toml
crates/ipfs_pin_service_axum_api_framework/examples/: basic.rs
crates/ipfs_pin_service_axum_api_framework/src/: api.rs  common.rs  dto.rs  errors.rs  lib.rs  models.rs
crates/ipfs_storage_cruster_app/: Cargo.toml
crates/ipfs_storage_cruster_manager/: Cargo.toml
crates/ipfs_storage_cruster_manager/src/: app_builder.rs  db_helper.rs  file_decision.rs  ipfs_helper.rs  lib.rs  utils.rs
crates/ipfs_storage_cruster_manager/src/app/: common.rs  daos.rs  dtos.rs  mod.rs
crates/ipfs_storage_cruster_manager/src/app/errors/: error_convert.rs  errors_list.rs  mod.rs
crates/ipfs_storage_cruster_manager/src/app/handlers/: file.rs  mod.rs
crates/ipfs_storage_cruster_manager/src/app/handlers/admin/: ipfs.rs  mod.rs  pin.rs
crates/ipfs_storage_cruster_manager/src/app/services/: db.rs  file.rs  ipfs.rs  mod.rs
crates/ipfs_storage_cruster_manager/src/file_decision/: decision_makers.rs  mod.rs
crates/ipfs_storage_cruster_manager/src/imports/: dao_imports.rs  mod.rs
crates/ipfs_storage_cruster_manager/src/ipfs_operator/: dtos.rs  mod.rs
crates/ipfs_storage_cruster_manager_app/: Cargo.toml  Settings.toml
crates/ipfs_storage_cruster_manager_app/src/: main.rs
crates/ipfs_storage_cruster_manager_entity/: Cargo.toml  Makefile
crates/ipfs_storage_cruster_manager_entity/src/: lib.rs  node.rs  pin.rs  pins_stored_nodes.rs  prelude.rs  sea_orm_active_enums.rs  user_pins.rs  users_pins.rs
crates/tiny_ipfs_client/: Cargo.toml
crates/tiny_ipfs_client/src/: client.rs  dtos.rs  errors.rs  lib.rs  models.rs
crates/tiny_ipfs_client/src/client/: apis.rs  mod.rs
crates/tiny_ipfs_client/tests/: basic_communication.rs
scripts/: ipfs_init.sh
sql/: ipfs_storage_cruster_manager.sql
