[package]
name = "deserialize_form_style_query_parameter"
version = "0.1.2"
edition = "2021"
description = "Deserialize Form style Query parameters with Serde."
license = "MIT OR Apache-2.0"
keywords = ["http", "query", "serde", "deserialize", "get"]
categories = ["parsing"]
readme = "README.md"
repository = "https://github.com/Ayana-chan/ipfs_storage_cruster/tree/master/crates/deserialize_form_style_query_parameter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_urlencoded = "0.7"
