[package]
name = "ipfs_node_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_tasks_state_map = { path = "../../../async_tasks_state_map" }
tiny_ipfs_client = {path = "../tiny_ipfs_client"}
ipfs_node_wrapper_structs = {path = "../ipfs_node_wrapper_structs", features = ["server"] }

tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tokio = { version = "1", features = ["full"] } #TODO 缩减
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
#parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
axum-macros = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
scc = { version = "2.0", features = ["serde"] }
