[package]
name = "ipfs_node_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async_tasks_state_map = { path = "../../../async_tasks_state_map" }
async_tasks_state_map = "1.0.1"
tiny_ipfs_client = { path = "../tiny_ipfs_client" }
ipfs_node_wrapper_structs = { path = "../ipfs_node_wrapper_structs", features = ["server"] }

tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tokio = { version = "1", features = ["time", "net", "parking_lot"] }
axum = "0.7"
axum-macros = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
scc = { version = "2.0" }
