[package]
name = "ipfs_node_wrapper_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs_node_wrapper_structs = {path = "../ipfs_node_wrapper_structs" }

tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
