[package]
name = "ipfs_node_wrapper_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs_node_wrapper_structs = {path = "../ipfs_node_wrapper_structs" }

tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
