[package]
name = "ipfs_node_wrapper_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["axum", "tracing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
scc = { version = "2.0", features = ["serde"] } #TODO delete
axum = { version = "0.7", optional = true }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"], optional = true }
