[package]
name = "ipfs_node_wrapper_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["axum"]

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", optional = true }
