[package]
name = "tiny_ipfs_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = { version = "0.12"}

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
