[package]
name = "tiny_ipfs_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no_gateway = []

[dependencies]
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
